# ourCAD

./: .gitignore  Cargo.toml  README.md  example.oc  test.oc
src/: boolean.rs  display.rs  main.rs  ops.rs  runtime.rs  solid.rs  stdlib.rs
src/compiler/: ast.rs  compile.rs  grammar.lalrpop  mod.rs  util.rs
src/format/: mod.rs  stl.rs
src/parser/: ast.rs  grammar.lalrpop  mod.rs  parse.rs
stories/: README.md  ben_examples.txt  initial-syntax.md  initial-syntax.txt  internal-objects.txt
stories/M_initial/: constraint.txt  cube.txt  makecutter.txt  thoughts.md
stories/M_test_2/: hinge.txt
