[package]
name = "ourCAD"
version = "0.1.0"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>", "Ben Doan <ben@bendoan.me>"]
build = "build.rs"

[features]
default = []
display = ["kiss3d", "nalgebra"]
bad_math = []

[dependencies]
lalrpop-util = "^0.16.0"
regex = "^0.2.0"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.32"
clap = "^2.32.0"
lazy_static = "1.2.0"
kiss3d = { version = "0.21", optional = true }
nalgebra = { version = "*", optional = true }

[build-dependencies]
lalrpop = "^0.16.0"
